begun to write the update part
 + adding a default config.php file in api/
 + which is included by api/index.php and misc/update.php
 + illuminate/database won't be used by loadcsv.php aswell
   as the config.php file because the parameters are awaited
   on the command line (cf: README.md)
 + fetching remote xml files
 + parsing via simplexml_load_string()
 + var_dump()ing for now

--- a/api/composer.json
+++ b/api/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "slim/slim": "~2.0"
+        "slim/slim": "~2.0",
+        "illuminate/database": "^5.1"
     }
 }
