--- a/api/composer.json
+++ b/api/composer.json
@@ -10,5 +10,8 @@
     "require": {
         "slim/slim": "~2.0",
         "illuminate/database": "^5.1"
+    },
+    "autoload": {
+        "psr-4": {"API\\": "src/"}
     }
 }
