--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "angular-animate": "^1.3.0"
+    "angular-animate": "^1.3.0",
+    "angular-material": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
