--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
-    "angular-material": "~0.10.0"
+    "angular-material": "~0.10.0",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
