--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -5,7 +5,8 @@
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
     "angular-material": "~0.10.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
