--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -6,7 +6,8 @@
     "angular-animate": "^1.3.0",
     "angular-material": "~0.10.0",
     "angular-ui-router": "~0.2.15",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
