--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -7,7 +7,10 @@
     "angular-material": "~0.10.0",
     "angular-ui-router": "~0.2.15",
     "font-awesome": "~4.3.0",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "angular-recaptcha": "~2.2.4",
+    "angular-highlightjs": "~0.4.3",
+    "highlightjs": "~8.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
