--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -10,7 +10,8 @@
     "angular-loading-bar": "~0.8.0",
     "angular-recaptcha": "~2.2.4",
     "highlightjs": "~8.6.0",
-    "angular-highlightjs": "~0.4.3"
+    "angular-highlightjs": "~0.4.3",
+    "angular-sanitize": "~1.4.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
