--- a/api/composer.json
+++ b/api/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "slim/slim": "~2.0",
-        "illuminate/database": "^5.1"
+        "illuminate/database": "^5.1",
+        "illuminate/events": "^5.1"
     },
     "autoload": {
         "psr-4": {
