--- a/api/composer.json
+++ b/api/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "slim/slim": "~2.0",
         "illuminate/database": "^5.1",
-        "illuminate/events": "^5.1"
+        "illuminate/events": "^5.1",
+        "google/recaptcha": "^1.1"
     },
     "autoload": {
         "psr-4": {
