--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,7 +11,8 @@
     "angular-recaptcha": "~2.2.4",
     "highlightjs": "~8.6.0",
     "angular-highlightjs": "~0.4.3",
-    "angular-sanitize": "~1.4.3"
+    "angular-sanitize": "~1.4.3",
+    "moment": "~2.10.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
