--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -12,7 +12,8 @@
     "highlightjs": "~8.6.0",
     "angular-highlightjs": "~0.4.3",
     "angular-sanitize": "~1.4.3",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "flag-icon-css": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
