--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,7 +13,8 @@
     "angular-highlightjs": "~0.4.3",
     "angular-sanitize": "~1.4.3",
     "moment": "~2.10.6",
-    "flag-icon-css": "~0.7.1"
+    "flag-icon-css": "~0.7.1",
+    "angular-translate": "~2.7.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
