--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -14,7 +14,8 @@
     "angular-sanitize": "~1.4.3",
     "moment": "~2.10.6",
     "flag-icon-css": "~0.7.1",
-    "angular-translate": "~2.7.2"
+    "angular-translate": "~2.7.2",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
