--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,7 +15,8 @@
     "moment": "~2.10.6",
     "flag-icon-css": "~0.7.1",
     "angular-translate": "~2.7.2",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "ngGallery": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
