--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -16,7 +16,8 @@
     "flag-icon-css": "~0.7.1",
     "angular-translate": "~2.7.2",
     "jquery": "~2.1.4",
-    "ngGallery": "*"
+    "ngGallery": "*",
+    "angular-markdown-directive": "~0.3.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
