--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-svgmin": "^2.0.0",
+    "grunt-uncss": "^0.4.3",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
