--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -18,7 +18,8 @@
     "jquery": "~2.1.4",
     "ngGallery": "*",
     "angular-markdown-directive": "~0.3.1",
-    "matchMedia": "~0.2.0"
+    "matchMedia": "~0.2.0",
+    "satellizer": "~0.12.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
