--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -19,7 +19,8 @@
     "ngGallery": "*",
     "angular-markdown-directive": "~0.3.1",
     "matchMedia": "~0.2.0",
-    "satellizer": "~0.12.2"
+    "satellizer": "~0.12.2",
+    "angular-messages": "~1.4.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
