Made a framework to separate :
 + What is logged server-side
 + Which code is sent to the client when the response ends being an error

--- a/api/composer.json
+++ b/api/composer.json
@@ -20,7 +20,8 @@
       "psr-4": {
          "API\\Core\\": "src/core",
          "API\\Model\\": "src/models",
-         "API\\OAuthServer\\": "src/oauthserver"
+         "API\\OAuthServer\\": "src/oauthserver",
+         "API\\Exception\\": "src/exceptions"
       }
    }
 }
