--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,7 +17,8 @@
     "angular-translate": "~2.7.2",
     "jquery": "~2.1.4",
     "ngGallery": "*",
-    "angular-markdown-directive": "~0.3.1"
+    "angular-markdown-directive": "~0.3.1",
+    "matchMedia": "~0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
