--- a/api/composer.json
+++ b/api/composer.json
@@ -14,7 +14,9 @@
       "google/recaptcha": "^1.1",
       "league/oauth2-client": "^1.0",
       "league/oauth2-github": "^0.2.0",
-      "league/oauth2-server": "^4.1"
+      "league/oauth2-server": "^4.1",
+      "swiftmailer/swiftmailer": "^5.4",
+      "twig/twig": "~1.0"
    },
    "autoload": {
       "psr-4": {
