--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
     "grunt-karma": "*",
+    "grunt-markdown": "^0.7.0",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-svgmin": "^2.0.0",
