--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,13 +15,13 @@
     "moment": "~2.10.6",
     "flag-icon-css": "~0.7.1",
     "angular-translate": "~2.7.2",
-    "jquery": "~2.1.4",
     "ngGallery": "*",
     "angular-markdown-directive": "~0.3.1",
     "matchMedia": "~0.2.0",
     "satellizer": "~0.12.2",
     "angular-messages": "~1.4.5",
-    "angular-cookies": "~1.4.5"
+    "angular-cookies": "~1.4.5",
+    "jquery": "^1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
