--- a/api/composer.json
+++ b/api/composer.json
@@ -16,7 +16,8 @@
       "league/oauth2-github": "^0.2.0",
       "league/oauth2-server": "^4.1",
       "swiftmailer/swiftmailer": "^5.4",
-      "twig/twig": "~1.0"
+      "twig/twig": "~1.0",
+      "suin/php-rss-writer": ">=1.0"
    },
    "autoload": {
       "psr-4": {
