Add docker container suitable for development
- Add docker container specs
- Fix version of dependencies in bower.json
- Update build dependencies and fix node version to 10.x
- Add package-lock.json
- Add composer.lock
- Drop uncss that prevent build to work as expected

--- a/api/composer.json
+++ b/api/composer.json
@@ -8,16 +8,17 @@
       }
    ],
    "require": {
-      "slim/slim": "~2.0",
+      "php": "^7.4",
+      "google/recaptcha": "^1.1",
       "illuminate/database": "5.1.*",
       "illuminate/events": "5.1.*",
-      "google/recaptcha": "^1.1",
       "league/oauth2-client": "^1.0",
       "league/oauth2-github": "^0.2.0",
       "league/oauth2-server": "^4.1",
+      "slim/slim": "~2.0",
+      "suin/php-rss-writer": ">=1.0",
       "swiftmailer/swiftmailer": "^5.4",
-      "twig/twig": "~1.0",
-      "suin/php-rss-writer": ">=1.0"
+      "twig/twig": "~1.0"
    },
    "autoload": {
       "psr-4": {
@@ -26,5 +27,9 @@
          "API\\OAuthServer\\": "src/oauthserver",
          "API\\Exception\\": "src/exceptions"
       }
+   },
+   "config": {
+      "optimize-autoloader": true,
+      "sort-packages": true
    }
 }
