--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,30 +2,35 @@
   "name": "frontend",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
-    "angular-animate": "^1.3.0",
-    "angular-material": "~0.10.0",
-    "angular-ui-router": "~0.2.15",
-    "font-awesome": "~4.3.0",
-    "angular-loading-bar": "~0.8.0",
-    "angular-recaptcha": "~2.2.4",
-    "highlightjs": "~8.6.0",
-    "angular-highlightjs": "~0.4.3",
-    "angular-sanitize": "~1.4.3",
-    "moment": "~2.10.6",
-    "flag-icon-css": "~0.7.1",
-    "angular-translate": "~2.7.2",
-    "ngGallery": "*",
-    "angular-markdown-directive": "~0.3.1",
-    "matchMedia": "~0.2.0",
-    "satellizer": "~0.12.2",
-    "angular-messages": "~1.4.5",
-    "angular-cookies": "~1.4.5",
-    "jquery": "^1"
+    "jquery": "1.12.4",
+    "angular": "1.4.14",
+    "angular-animate": "1.4.14",
+    "angular-material": "0.10.1",
+    "angular-ui-router": "0.2.18",
+    "font-awesome": "4.3.0",
+    "angular-loading-bar": "0.8.0",
+    "angular-recaptcha": "2.2.5",
+    "highlightjs": "8.6.0",
+    "angular-highlightjs": "0.4.3",
+    "angular-sanitize": "1.4.14",
+    "moment": "2.10.6",
+    "flag-icon-css": "0.7.1",
+    "angular-translate": "2.7.2",
+    "ngGallery": "95f06f892b2ccc98e4812ff29c4feda256c4f3e7",
+    "angular-markdown-directive": "0.3.1",
+    "matchMedia": "0.2.0",
+    "satellizer": "0.12.5",
+    "angular-messages": "1.4.14",
+    "angular-cookies": "1.4.14",
+    "angular-aria": "1.4.14",
+    "showdown": "0.3.4"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "1.4.14"
   },
   "appPath": "app",
-  "moduleName": "frontendApp"
+  "moduleName": "frontendApp",
+  "resolutions": {
+    "angular": "1.4.14"
+  }
 }
