--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,39 +2,40 @@
   "name": "frontend",
   "private": true,
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^2.0.0",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.12.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^2.1.2",
+    "grunt": "^1.3.0",
+    "grunt-angular-templates": "^1.2.0",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-concurrent": "^3.0.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-filerev": "^2.3.1",
     "grunt-google-cdn": "^0.4.3",
-    "grunt-karma": "*",
+    "grunt-karma": "^4.0.0",
     "grunt-markdown": "^0.7.0",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^0.9.2",
-    "grunt-svgmin": "^2.0.0",
-    "grunt-uncss": "^0.4.3",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
-    "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^1.0.0",
-    "karma-jasmine": "*",
-    "karma-phantomjs-launcher": "*",
-    "time-grunt": "^1.0.0"
+    "grunt-newer": "^1.3.0",
+    "grunt-ng-annotate": "^4.0.0",
+    "grunt-svgmin": "^6.0.1",
+    "grunt-usemin": "^3.1.1",
+    "grunt-wiredep": "^3.0.1",
+    "jit-grunt": "^0.10.0",
+    "jshint-stylish": "^2.2.1",
+    "karma": "^6.3.2",
+    "karma-jasmine": "^4.0.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "serve-static": "^1.14.1",
+    "time-grunt": "^2.0.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "^10.0.0"
   },
   "scripts": {
     "test": "grunt test"
