--- a/api/composer.json
+++ b/api/composer.json
@@ -9,6 +9,14 @@
    ],
    "require": {
       "php": "^7.4",
+      "ext-PDO": "*",
+      "ext-curl": "*",
+      "ext-dom": "*",
+      "ext-json": "*",
+      "ext-libxml": "*",
+      "ext-mbstring": "*",
+      "ext-pdo_mysql": "*",
+      "ext-simplexml": "*",
       "google/recaptcha": "^1.1",
       "illuminate/database": "5.1.*",
       "illuminate/events": "5.1.*",
